[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/font/joystix monospace.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sound/player/shotgun-firing-4-6746.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/kai/Idle.png" type="Texture" id=4]
[ext_resource path="res://assets/kai/Run.png" type="Texture" id=5]
[ext_resource path="res://assets/kai/Shot_2.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.75, 32 )

[sub_resource type="DynamicFont" id=60]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=61]
size = 9
outline_color = Color( 0.52549, 1, 0.556863, 1 )
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=77]
extents = Vector2( 41.4453, 11.625 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 240, 189 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 12.125, 139.5 )
scale = Vector2( 1.24805, 1.17969 )
frames = SubResource( 17 )
animation = "shoot"

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2( 9.25, 178 )
shape = SubResource( 3 )

[node name="status" type="Node2D" parent="."]
position = Vector2( 3, 138 )

[node name="titleHp" type="Label" parent="status"]
margin_left = -12.0
margin_top = -9.0
margin_right = 28.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 60 )
text = "HP"

[node name="Hp" type="Label" parent="status"]
margin_left = 6.0
margin_top = -8.0
margin_right = 46.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0.545098, 1, 0.529412, 1 )
custom_fonts/font = SubResource( 61 )
text = "100"

[node name="shoot_right" type="Area2D" parent="."]
position = Vector2( 248, -2 )

[node name="right" type="CollisionShape2D" parent="shoot_right"]
position = Vector2( -173, 160 )
shape = SubResource( 77 )
disabled = true

[node name="shoot_left" type="Area2D" parent="."]
position = Vector2( -247, 1 )

[node name="left" type="CollisionShape2D" parent="shoot_left"]
position = Vector2( 187, 157 )
shape = SubResource( 77 )
disabled = true

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -240, -189 )
stream = ExtResource( 3 )

[connection signal="body_entered" from="shoot_right" to="." method="_on_shoot_right_body_entered"]
[connection signal="body_entered" from="shoot_left" to="." method="_on_shoot_left_body_entered"]
